Fix for #cta background-attachment property on mobile?

--- a/main.scss
+++ b/main.scss
@@ -1945,6 +1945,12 @@
 
 /* Overrides & Custom */
 
+    body.is-mobile {
+        #cta {
+            background-attachment: unset !important;
+        }
+    }
+
     .formkit-alert {
             background: #ffff0038;
     }
